--- a/cadastro/src/pages/Home/style.css
+++ b/cadastro/src/pages/Home/style.css
@@ -9,9 +9,6 @@
 }
 
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: #1E1D40;
     color: var(--font-color);
 }
 
@@ -21,6 +18,9 @@ body {
     flex-direction: column;
     padding-top: 100px;
     min-height: 100vh;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 h1 {
@@ -127,6 +127,45 @@ form input:focus {
 .delete-button:hover, .edit-button:hover {
     transform: scale(1.1);
     color: #fe5f02;
+}
+
+@media (max-width: 1024px) {
+    .container {
+        padding-top: 120px;
+        width: 90%;
+        max-width: 1024px;
+    }
+
+    form {
+        max-width: 80%;
+    }
+
+    h1 {
+        font-size: 28px;
+    }
+
+    .card {
+        padding: 18px;
+    }
+}
+
+@media (max-width: 375px) {
+    .container {
+        width: 95%;
+    }
+
+    form {
+        max-width: 90%;
+    }
+
+    h1 {
+        font-size: 20px;
+    }
+
+    .card {
+        max-width: 90%;
+        padding: 12px;
+    }
 }
 
 @media (min-width: 768px) {
